<resources>
    <string name="app_name">Sip</string>
    <string name="sign_up">Sign Up</string>
    <string name="signupbutton">Sign Up</string>
    <string name="signinbutton">Sign In</string>
    <string name="signinviagoogle">Sign In via Google</string>
    <string name="signinviafacebook">Sign In via Facebook</string>
    <string name="signinviakakao">Sign In via Kakao</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Password Confirm</string>
    <string name="tab_1">Beverage</string>
    <string name="tab_2">Brand</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nickname">Nickname</string>
</resources>
